--- a/pack.html
+++ b/pack.html
@@ -38,7 +38,7 @@
     <main class="mm">
         <div class="mm1">
         <ul class="ul2">
-            <li><a href="" class="pi">Things to do</a></li>
+            <li><a href="index.html" class="pi">Things to do</a></li>
             <li><a href="Flights.html" class="pi">Flights</a></li>
             <li><a href="cars.html" class="pi">Cars</a></li>
             <li><a href="" class="op">Packages</a></li>
