--- a/Tri.html
+++ b/Tri.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trips</title>
     <link rel="stylesheet" href="Tri.css">
 
      <link rel="stylesheet" 
