--- a/about.html
+++ b/about.html
@@ -111,6 +111,15 @@
                LCU/UG/23/25507 <br>
                Computer science with electronics</p>
                </div>
+
+                        <div class="const1">
+                <i class="fa-solid fa-circle-user"></i>
+                <p>Awonusi Timilehin Joshua<br>
+                   LCU/UG/24/34253 <br>
+                   Computer Science</p>
+               </div> 
+
+            
         </div>
     </section>
 
